--- a/assets/scss/widgets/hot-spots/_hot-spots.scss
+++ b/assets/scss/widgets/hot-spots/_hot-spots.scss
@@ -38,6 +38,10 @@
         &:hover:before {
             animation: none;
         }
+
+        & .pp-hotspot-text {
+            z-index: 1;
+        }
     }
 }
 .pp-hot-spot-inner,
